# ChangeLog for app-crypt/gpa
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/gpa/ChangeLog,v 1.28 2005/01/02 19:19:16 ciaranm Exp $

  02 Jan 2005; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  16 Nov 2004; Daniel Black <dragonheart@gentoo.org> -gpa-0.6.1.ebuild,
  gpa-0.7.0-r2.ebuild:
  cleanup of old ebuild that depend on old gpgme versions in the deletion queue

  02 Oct 2004; Bryan Østergaard <kloeri@gentoo.org> gpa-0.7.0-r2.ebuild:
  Keyword ~alpha, requested in bug 64485.

  29 Sep 2004; Gustavo Zacarias <gustavoz@gentoo.org> gpa-0.7.0-r2.ebuild:
  Stable on sparc wrt #64485

  10 Sep 2004; Daniel Black <dragonheart@gentoo.org> metadata.xml,
  gpa-0.6.1.ebuild, -gpa-0.7.0-r1.ebuild, -gpa-0.7.0.ebuild:
  cypto herd taking maintaince. Removed old versions and modified gpgme
  dependancy in preparation for new gpgme stabilisation

*gpa-0.7.0-r2 (08 Aug 2004)

  08 Aug 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
  +gpa-0.7.0-r2.ebuild:
  Depandancy changes as per bug #57193.

  11 Jul 2004; Danny van Dyk <kugelfang@gentoo.org> gpa-0.7.0-r1.ebuild:
  Marked ~amd64.

*gpa-0.7.0-r1 (16 Jun 2004)

  16 Jun 2004; Martin Schlemmer <azarah@gentoo.org> +gpa-0.7.0-r1.ebuild:
  By default gnupg puts gpgkeys_hkp in /usr/libexec/gnupg, so
  check if it is in uncommon /usr/lib/gnupg, and change libexecdir
  if so.  If we do not do this, hkp server types is not usable,
  as gpa cannot find gpgkeys_hkp ...

  15 Jun 2004; Scott W Taylor <swtaylor@gentoo.org> gpa-0.7.0.ebuild:
  dependancy fix for gpa #54013

*gpa-0.7.0 (14 Jun 2004)

  14 Jun 2004; Scott W Taylor <swtaylor@gentoo.org> +gpa-0.7.0.ebuild:
  version bump

  25 Apr 2004; Aron Griffis <agriffis@gentoo.org> gpa-0.6.1.ebuild:
  Add die following econf for bug 48950

  21 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org> gpa-0.4.3.ebuild:
  old ebuild cleanup
